2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-key-binding): Remove the code to reset
	`w3m-minor-mode-map'.
	(w3m-minor-mode-command-alist): Update its docstring.
	(w3m-minor-mode-map, w3m-minor-mode-hook, w3m-minor-mode):
	Abolished.
	(w3m-minor-mode): Removed.

	* mime-w3m.el (mime-w3m-setup): Call `w3m-make-minor-mode-keymap'
	without using `w3m-minor-mode-map'.

	* mew-w3m.el (mew-use-w3m-minor-mode): Update its docstring.
	(mew-w3m-minor-mode-map): New variable.
	(toplevel): Revival the code to add a minor mode.
	(mew-w3m-minor-mode-setter): Cancel the last change.

2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-key-binding): Revival the code to reset
	`mime-w3m-mode-map'.

	* mime-w3m.el (mime-w3m-mode-map): Revival.
	(mime-w3m-setup): Initialize `mime-w3m-mode-map' based on
	`w3m-minor-mode-map'; Modify it to set its parent map to
	`mime-view-mode-default-map'.
	(mime-w3m-preview-text/html) [XEmacs,Emacs21]: Unify `local-map'
	as text property.

	* w3m.el (w3m-make-minor-mode-keymap): Call `make-spase-keymap'
	instead of `make-keymap'.

2002-10-22  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-entity-regexp): As simple regexp. Existance of final
	semi-collon is to be detected.
	(w3m-entity-value): 2nd argument STRICT is added. If not STRICT,
	find entity from db by maxmum length matching, and returns it with
	appending unused chars. Returns nil if not match.
	And also use defun instead of defsubst.
	(w3m-decode-entities): Use new `w3m-entity-value' with 2nd arg.

2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-minor-mode): Define without `define-minor-mode'.
	(w3m-minor-mode): Ditto.
	(w3m-minor-mode-hook): Ditto.
	(w3m-entity-regexp): Set 3000 to `max-specpdl-size' locally to
	avoid max-specpdl-size error.

	* w3m-e19.el: Cancel the last change to define
	`define-minor-mode'.
	* w3m-fsf.el: Ditto.
	* w3m-om.el: Ditto.

	* attic/easy-mmode.el: Removed.
