@@ -1,3 +1,11 @@
+2002-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-om.el (coding-system-list): Use `defalias' and `lambda'
+	instead of `defun'; allow an optional dummy argument; don't ignore
+	`*noconv*'.
+	(read-passwd): Use `defalias' and `lambda' instead of `defun'.
+	(compose-mail): Ditto.
+
 2002-10-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-key-binding): Remove the code to reset
